Bijayini | #2709 | Fix expand collapse issue in all the observation display controls and admission display control across all pages: Dashboard, Visit Page, Configured Visit Pages, Configured Dashboard Page. ---- issue 1

--- a/ui/app/styles/bahmni-components/_buttons.scss
+++ b/ui/app/styles/bahmni-components/_buttons.scss
@@ -615,21 +615,17 @@ input[type="submit"].secondary-button:hover  {
   }
 }
 
-.toggle-btn{
-  button.toggle{
-    .fa-angle-up{
-      display: none;
-    }
+button.toggle{
+  .fa-angle-up{
+    display: none;
   }
   &.active{
-    button.toggle{
-      background: none !important;
-      .fa-angle-up{
-        display: block;
-      }
-      .fa-angle-down{
-        display: none;
-      }
+    background: none !important;
+    .fa-angle-up{
+      display: block;
+    }
+    .fa-angle-down{
+      display: none;
     }
   }
 }
